attempt at clean code #3 - unsuccessfull

--- a/src/index.html
+++ b/src/index.html
@@ -621,8 +621,10 @@
         </div>
     </main>
 
-    
+    <!-- <script src="./core/Loading.js"></script> -->
+
     <script type="module" src="./script.js"></script>
+    
     <script>
         /// toggling the shapes
         function toggleShape(index){
