split code and better connect_gui function

--- a/src/index.html
+++ b/src/index.html
@@ -560,9 +560,10 @@
 
     <!-- Loading Screen: When working, remove this and its js code -->
 
+    <!-- 
+
     <div id="loading-screen" class="Loading">
         <div class="Loading__Title">
-            <!-- svg -->
             <h1>LOW <span>POLY</span> LABORATORY</h1>
             <p>version: alpha 0.1</p>
         </div>
@@ -574,6 +575,8 @@
             <div id="loader"></div>
         </div>
     </div>
+
+-->
 
     <script type="module" src="./script.js"></script>
     <script>
@@ -589,7 +592,8 @@
             panel.classList.toggle("hide");
         }
     </script>
-    <script type="module" src="./core/Loading.js"></script>
+    <!-- <script type="module" src="./core/Loading.js"></script> -->
+    <script type="module" src="./core/Theme.js"></script>
 </body>
 
 </html>
