better script file management

--- a/src/index.html
+++ b/src/index.html
@@ -369,32 +369,6 @@
                                 id="sldr_thickness_value">
                         </div>
                     </div>
-                    <div class="panel-material_sliders-slider">
-                        <label>Radius: </label>
-                        <div class="slider">
-                            <input id="sldr_radius" class="panel-material_slider-input" min="1.0" max="10.0" step="0.01"
-                                value="1.0" type="range">
-                            <input class="panel-material_slider-value" type="text" value="1.0" id="sldr_radius_value">
-                        </div>
-                    </div>
-                    <div class="panel-material_sliders-slider">
-                        <label>Length: </label>
-                        <div class="slider">
-                            <input id="sldr_length" class="panel-material_slider-input" min="1.0" max="10.0" step="0.01"
-                                value="1.0" type="range">
-                            <input class="panel-material_slider-value" type="text" value="1.0" id="sldr_length_value">
-                        </div>
-                    </div>
-                    <div class="panel-material_sliders-slider">
-                        <label>Segments: </label>
-                        <div class="slider">
-                            <input id="sldr_segments" class="panel-material_slider-input" min="1.0" max="40.0"
-                                step="1.0" value="32.0" type="range">
-                            <input class="panel-material_slider-value" type="text" value="32.0"
-                                id="sldr_segments_value">
-                        </div>
-                    </div>
-
 
                 </div>
 
@@ -560,7 +534,6 @@
 
     <!-- Loading Screen: When working, remove this and its js code -->
 
-    <!-- 
 
     <div id="loading-screen" class="Loading">
         <div class="Loading__Title">
@@ -576,7 +549,6 @@
         </div>
     </div>
 
--->
 
     <script type="module" src="./script.js"></script>
     <script>
@@ -592,7 +564,7 @@
             panel.classList.toggle("hide");
         }
     </script>
-    <!-- <script type="module" src="./core/Loading.js"></script> -->
+    <script type="module" src="./core/Loading.js"></script>
     <script type="module" src="./core/Theme.js"></script>
 </body>
 
