Pre-Alpha Release

--- a/src/index.html
+++ b/src/index.html
@@ -544,7 +544,7 @@
     <!-- Loading Screen: When working, remove this and its js code -->
 
 
-    <!-- <div id="loading-screen" class="Loading">
+    <div id="loading-screen" class="Loading">
         <div class="Loading__Title">
             <h1>LOW <span>POLY</span> LABORATORY</h1>
             <p>version: alpha 0.1</p>
@@ -556,7 +556,7 @@
             <p>Loading: <span id="loading-item"></span></p>
             <div id="loader"></div>
         </div>
-    </div> -->
+    </div>
 
 
     <script type="module" src="./script.js"></script>
@@ -573,7 +573,7 @@
             panel.classList.toggle("hide");
         }
     </script>
-    <!-- <script type="module" src="./core/Loading.js"></script> -->
+    <script type="module" src="./core/Loading.js"></script> 
     <script type="module" src="./core/Theme.js"></script>
 </body>
 
